--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     <div class="content" id="content">
         <header id="top">
             <h1><i class="fas fa-ruler-combined"></i> Система анализа кривизны стола 3D-принтера</h1>
-            <p class="subtitle">Полное руководство пользователя с боковой навигацией</p>
+            <p class="subtitle">Руководство пользователя</p>
             <div class="header-meta">
                 <span><i class="far fa-calendar"></i> Декабрь 2024</span>
                 <span><i class="fas fa-code-branch"></i> Версия 1.0</span>
