--- a/index.html
+++ b/index.html
@@ -530,27 +530,27 @@
             <div class="nav-section">
                 <div class="nav-section-title"><i class="fas fa-home"></i> Основные разделы</div>
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#hardware" class="nav-link active"><span
-                                class="nav-icon">🔧</span>Аппаратная часть</a></li>
-                    <li class="nav-item"><a href="#section1" class="nav-link"><span class="nav-icon">🔍</span>1. Общее
+                    <li class="nav-item"><a href="#section1" class="nav-link active"><span
+                                class="nav-icon">🔧</span>1. Аппаратная часть</a></li>
+                    <li class="nav-item"><a href="#section2" class="nav-link"><span class="nav-icon">🔍</span>2. Общее
                             описание</a></li>
-                    <li class="nav-item"><a href="#section2" class="nav-link"><span class="nav-icon">💻</span>2.
+                    <li class="nav-item"><a href="#section3" class="nav-link"><span class="nav-icon">💻</span>3.
                             Требования</a></li>
-                    <li class="nav-item"><a href="#section3" class="nav-link"><span class="nav-icon">📦</span>3.
+                    <li class="nav-item"><a href="#section4" class="nav-link"><span class="nav-icon">📦</span>4.
                             Установка</a></li>
-                    <li class="nav-item"><a href="#section4" class="nav-link"><span class="nav-icon">🖼️</span>4.
+                    <li class="nav-item"><a href="#section5" class="nav-link"><span class="nav-icon">🖼️</span>5.
                             Интерфейс</a></li>
-                    <li class="nav-item"><a href="#section5" class="nav-link"><span class="nav-icon">🔌</span>5.
+                    <li class="nav-item"><a href="#section6" class="nav-link"><span class="nav-icon">🔌</span>6.
                             Подключение</a></li>
-                    <li class="nav-item"><a href="#section6" class="nav-link"><span class="nav-icon">📏</span>6.
+                    <li class="nav-item"><a href="#section7" class="nav-link"><span class="nav-icon">📏</span>7.
                             Измерения</a></li>
-                    <li class="nav-item"><a href="#section7" class="nav-link"><span class="nav-icon">🤖</span>7.
+                    <li class="nav-item"><a href="#section8" class="nav-link"><span class="nav-icon">🤖</span>8.
                             Автообход</a></li>
-                    <li class="nav-item"><a href="#section8" class="nav-link"><span class="nav-icon">📊</span>8.
+                    <li class="nav-item"><a href="#section9" class="nav-link"><span class="nav-icon">📊</span>9.
                             Анализ</a></li>
-                    <li class="nav-item"><a href="#section9" class="nav-link"><span class="nav-icon">💾</span>9.
+                    <li class="nav-item"><a href="#section10" class="nav-link"><span class="nav-icon">💾</span>10.
                             Экспорт</a></li>
-                    <li class="nav-item"><a href="#section10" class="nav-link"><span class="nav-icon">🔧</span>10.
+                    <li class="nav-item"><a href="#section11" class="nav-link"><span class="nav-icon">🔧</span>11.
                             Устранение проблем</a></li>
                 </ul>
             </div>
@@ -586,9 +586,9 @@
             </div>
         </header>
 
-        <!-- Аппаратная часть -->
-        <div class="container" id="hardware">
-            <h2><i class="fas fa-microchip"></i> Аппаратная часть системы</h2>
+        <!-- Раздел 1 -->
+        <div class="container" id="section1">
+            <h2><i class="fas fa-microchip"></i> 1. Аппаратная часть системы</h2>
 
             <div class="screenshot">
                 <img src="images/hardware_setup.jpg" alt="Аппаратная часть системы">
@@ -669,9 +669,9 @@
             </div> -->
         </div>
 
-        <!-- Раздел 1 -->
-        <div class="container" id="section1">
-            <h2><i class="fas fa-search"></i> 1. Общее описание </h2>
+        <!-- Раздел 2 -->
+        <div class="container" id="section2">
+            <h2><i class="fas fa-search"></i> 2. Общее описание </h2>
 
             <p>Программа предназначена для точного анализа и выравнивания стола 3D-принтера с 
                 применением датчика типа Digital Dial Indicator.</p>
@@ -698,9 +698,9 @@
             </div>
         </div>
 
-        <!-- Раздел 2 -->
-        <div class="container" id="section2">
-            <h2><i class="fas fa-laptop"></i> 2. Требования к системе</h2>
+        <!-- Раздел 3 -->
+        <div class="container" id="section3">
+            <h2><i class="fas fa-laptop"></i> 3. Требования к системе</h2>
 
             <h3>Аппаратные требования:</h3>
             <div class="requirements-grid">
@@ -727,7 +727,7 @@
                 </div>
             </div>
 
-            <h3>Программные требования:</h3>
+            <!-- <h3>Программные требования:</h3>
             <div class="requirements-grid">
                 <div class="requirement-card software">
                     <h4><i class="fab fa-python"></i> Python 3.8+</h4>
@@ -745,7 +745,7 @@
                         <li>scipy ≥ 1.11.0</li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
 
             <div class="warning">
                 <strong><i class="fas fa-exclamation-triangle"></i> Внимание:</strong> На Windows может потребоваться
@@ -753,9 +753,9 @@
             </div>
         </div>
 
-        <!-- Раздел 3 -->
-        <div class="container" id="section3">
-            <h2><i class="fas fa-download"></i> 3. Установка и запуск</h2>
+        <!-- Раздел 4 -->
+        <div class="container" id="section4">
+            <h2><i class="fas fa-download"></i> 4. Установка и запуск</h2>
 
             <h3>Пошаговая установка:</h3>
 
@@ -821,9 +821,9 @@
             </div>
         </div>
 
-        <!-- Раздел 4 -->
-        <div class="container" id="section4">
-            <h2><i class="fas fa-desktop"></i> 4. Интерфейс программы</h2>
+        <!-- Раздел 5 -->
+        <div class="container" id="section5">
+            <h2><i class="fas fa-desktop"></i> 5. Интерфейс программы</h2>
 
             <div class="screenshot">
                 <img src="images/program_interface.png" alt="Интерфейс программы">
@@ -930,9 +930,9 @@
         </div>
 
         <!-- Раздел 5 -->
-        <!-- Раздел 5 -->
-        <div class="container" id="section5">
-            <h2><i class="fas fa-plug"></i> 5. Подключение к датчику</h2>
+        <!-- Раздел 6 -->
+        <div class="container" id="section6">
+            <h2><i class="fas fa-plug"></i> 6. Подключение к датчику</h2>
 
             <div class="connection-type">
                 <div class="connection-card serial">
@@ -1032,9 +1032,9 @@
             </div>
         </div>
 
-        <!-- Раздел 6 -->
-        <div class="container" id="section6">
-            <h2><i class="fas fa-ruler"></i> 6. Процесс измерения</h2>
+        <!-- Раздел 7 -->
+        <div class="container" id="section7">
+            <h2><i class="fas fa-ruler"></i> 7. Процесс измерения</h2>
 
             <div class="screenshot">
                 <img src="images/measurement_process.png" alt="Процесс измерения">
@@ -1140,9 +1140,9 @@
             </div>
         </div>
 
-        <!-- Раздел 7 -->
-        <div class="container" id="section7">
-            <h2><i class="fas fa-robot"></i> 7. Автоматический обход</h2>
+        <!-- Раздел 8 -->
+        <div class="container" id="section8">
+            <h2><i class="fas fa-robot"></i> 8. Автоматический обход</h2>
 
             <div class="screenshot">
                 <img src="images/auto_measurement.png" alt="Автоматический обход">
@@ -1273,9 +1273,9 @@
             </ul>
         </div>
 
-        <!-- Раздел 8 -->
-        <div class="container" id="section8">
-            <h2><i class="fas fa-chart-line"></i> 8. Анализ результатов</h2>
+        <!-- Раздел 9 -->
+        <div class="container" id="section9">
+            <h2><i class="fas fa-chart-line"></i> 9. Анализ результатов</h2>
 
             <h3>Статистика измерений:</h3>
             <div class="screenshot">
@@ -1500,9 +1500,9 @@
             </div>
         </div>
 
-        <!-- Раздел 9 -->
-        <div class="container" id="section9">
-            <h2><i class="fas fa-database"></i> 9. Экспорт и импорт данных</h2>
+        <!-- Раздел 10 -->
+        <div class="container" id="section10">
+            <h2><i class="fas fa-database"></i> 10. Экспорт и импорт данных</h2>
 
             <h3>Сохранение измерений в файл:</h3>
 
@@ -1693,9 +1693,9 @@
             </div>
         </div>
 
-        <!-- Раздел 10 -->
-        <div class="container" id="section10">
-            <h2><i class="fas fa-tools"></i> 10. Устранение неполадок</h2>
+        <!-- Раздел 11 -->
+        <div class="container" id="section11">
+            <h2><i class="fas fa-tools"></i> 11. Устранение неполадок</h2>
 
             <h3>Распространенные проблемы и решения:</h3>
             <div class="table-container">
