--- a/index.html
+++ b/index.html
@@ -353,6 +353,16 @@
 
         .button-example {
             display: inline-block;
+            background: #2196F3;
+            color: white;
+            padding: 8px 16px;
+            border-radius: 5px;
+            margin: 5px;
+            font-weight: bold;
+        }
+        
+        .auto-measure-button {
+            display: inline-block;
             background: #4CAF50;
             color: white;
             padding: 8px 16px;
@@ -552,6 +562,8 @@
                             Экспорт</a></li>
                     <li class="nav-item"><a href="#section11" class="nav-link"><span class="nav-icon">🔧</span>11.
                             Устранение проблем</a></li>
+                    <li class="nav-item"><a href="#downloads" class="nav-link"><span class="nav-icon">⬇️</span>12.
+                            Загрузки</a></li>
                 </ul>
             </div>
 
@@ -562,6 +574,7 @@
                             вопросы</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link"><span
                                 class="nav-icon">📞</span>Контакты</a></li>
+                    <li class="nav-item"><a href="#downloads" class="nav-link"><span class="nav-icon">⬇️</span>Загрузки</a></li>
                     <li class="nav-item"><a href="#top" class="nav-link"><span class="nav-icon">⬆️</span>В начало</a>
                     </li>
                 </ul>
@@ -707,7 +720,7 @@
                 <div class="requirement-card hardware">
                     <h4><i class="fas fa-desktop"></i> Компьютер</h4>
                     <ul>
-                        <li>Windows 10/11, Linux</li>
+                        <li>Windows 10/11 </li>
                         <li>2 ГБ оперативной памяти (минимум)</li>
                         <li>100 МБ свободного места на диске</li>
                         <li>USB порт для подключения датчика</li>
@@ -727,26 +740,6 @@
                 </div>
             </div>
 
-            <!-- <h3>Программные требования:</h3>
-            <div class="requirements-grid">
-                <div class="requirement-card software">
-                    <h4><i class="fab fa-python"></i> Python 3.8+</h4>
-                    <p>Скачать с <a href="https://python.org" target="_blank">python.org</a></p>
-                    <p>Обязательно отметьте "Add Python to PATH" при установке</p>
-                </div>
-
-                <div class="requirement-card software">
-                    <h4><i class="fas fa-box-open"></i> Библиотеки Python</h4>
-                    <ul>
-                        <li>customtkinter ≥ 5.2.0</li>
-                        <li>pyserial ≥ 3.5</li>
-                        <li>matplotlib ≥ 3.7.0</li>
-                        <li>numpy ≥ 1.24.0</li>
-                        <li>scipy ≥ 1.11.0</li>
-                    </ul>
-                </div>
-            </div> -->
-
             <div class="warning">
                 <strong><i class="fas fa-exclamation-triangle"></i> Внимание:</strong> На Windows может потребоваться
                 установка драйверов для COM-портов (драйверы CH340 для большинства Arduino-совместимых устройств).
@@ -761,63 +754,29 @@
 
             <div class="step">
                 <span class="step-number">1</span>
-                <strong>Установите Python</strong>
-                <p>Скачайте и установите Python 3.8 или новее с официального сайта. При установке обязательно отметьте
-                    галочку "Add Python to PATH".</p>
+                <strong>Скачайте программу</strong>
+                <p>Скачайте программу по ссылке из раздела 12 (Загрузки) на этой странице. Программа не требует установки и не содержит вредоносного ПО.</p>
             </div>
 
             <div class="step">
                 <span class="step-number">2</span>
-                <strong>Установите необходимые библиотеки</strong>
-                <p>Откройте командную строку (терминал) и выполните команду:</p>
-                <code>pip install customtkinter pyserial matplotlib numpy scipy</code>
-                <p style="margin-top: 10px;">Или установите все сразу из файла requirements.txt если он есть:</p>
-                <code>pip install -r requirements.txt</code>
+                <strong>Сохраните программу</strong>
+                <p>Сохраните скачанный файл в удобную для вас директорию на компьютере.</p>
             </div>
 
             <div class="step">
                 <span class="step-number">3</span>
                 <strong>Запустите программу</strong>
-                <p>В командной строке перейдите в папку с программой и выполните:</p>
-                <code>python main.py</code>
-                <p style="margin-top: 10px;">Или двойной клик по файлу main.py, если ассоциации с Python настроены
-                    правильно.</p>
+                <p>Дважды щелкните левой кнопкой мыши по скачанному файлу программы для запуска.</p>
             </div>
 
             <div class="screenshot">
                 <img src="images/program_launch.png" alt="Запуск программы">
-                <p class="caption">Рисунок 4: Запуск программы через командную строку</p>
+                <p class="caption">Рисунок 4: Запуск программы двойным кликом по исполняемому файлу</p>
             </div>
 
             <div class="warning">
-                <strong><i class="fas fa-exclamation-triangle"></i> Внимание:</strong> При первом запуске программа
-                создаст необходимые папки и файлы конфигурации. Не прерывайте этот процесс.
-            </div>
-
-            <h3>Возможные проблемы при установке:</h3>
-            <div class="table-container">
-                <table>
-                    <tr>
-                        <th>Проблема</th>
-                        <th>Решение</th>
-                    </tr>
-                    <tr>
-                        <td>"pip не является командой"</td>
-                        <td>Переустановите Python с галочкой "Add Python to PATH"</td>
-                    </tr>
-                    <tr>
-                        <td>Ошибки при установке библиотек</td>
-                        <td>Обновите pip: <code>python -m pip install --upgrade pip</code></td>
-                    </tr>
-                    <tr>
-                        <td>Нет прав для установки</td>
-                        <td>Используйте флаг --user: <code>pip install --user package_name</code></td>
-                    </tr>
-                    <tr>
-                        <td>Конфликт версий</td>
-                        <td>Создайте виртуальное окружение: <code>python -m venv venv</code></td>
-                    </tr>
-                </table>
+                <strong><i class="fas fa-exclamation-triangle"></i> Внимание:</strong> Программа не требует установки и может быть запущена сразу после скачивания.
             </div>
         </div>
 
@@ -825,10 +784,10 @@
         <div class="container" id="section5">
             <h2><i class="fas fa-desktop"></i> 5. Интерфейс программы</h2>
 
-            <div class="screenshot">
+            <!-- <div class="screenshot">
                 <img src="images/program_interface.png" alt="Интерфейс программы">
                 <p class="caption">Рисунок 5: Основной интерфейс </p>
-            </div>
+            </div> -->
 
             <h3>Три основные вкладки программы:</h3>
 
@@ -882,19 +841,19 @@
             </div>
 
             <h4><i class="fas fa-cog"></i> 2. Вкладка "Настройки"</h4>
-            <p>Позволяет настраивать подключение к датчику, параметры стола, калибровку датчика и другие параметры
+            <p>Позволяет настраивать подключение к датчику, параметры стола и другие параметры
                 программы. Здесь же выполняется подключение/отключение от устройства.</p>
 
             <div class="screenshot">
                 <img src="images/tab_settings.png" alt="Вкладка 'Настройки'">
-                <p class="caption">Рисунок 7: Вкладка "Настройки" с параметрами подключения и калибровки</p>
+                <p class="caption">Рисунок 7: Вкладка "Настройки" с параметрами подключения</p>
             </div>
 
             <p>Во вкладке настроек можно выполнить:</p>
             <ul class="feature-list">
                 <li><strong>Выбор типа подключения</strong> - Serial (USB) или WiFi</li>
                 <li><strong>Настройка параметров стола</strong> - ширина, глубина, количество точек по X и Y</li>
-                <li><strong>Калибровка датчика</strong> - смещение и коэффициент для коррекции измерений</li>
+                <!-- <li><strong>Калибровка датчика</strong> - смещение и коэффициент для коррекции измерений</li> -->
                 <li><strong>Управление подключением</strong> - кнопка подключения/отключения устройства</li>
                 <li><strong>Обновление списка портов</strong> - автоматическое определение доступных COM-портов</li>
             </ul>
@@ -1067,7 +1026,7 @@
             <div class="step">
                 <span class="step-number">4</span>
                 <strong>Зафиксируйте измерение</strong>
-                <p>Нажмите кнопку <span class="button-example">📌 ЗАФИКСИРОВАТЬ ИЗМЕРЕНИЕ</span>. Появится всплывающее
+                <p>Нажмите кнопку <span class="button-example"> ЗАФИКСИРОВАТЬ ИЗМЕРЕНИЕ</span>. Появится всплывающее
                     окно с подтверждением.</p>
             </div>
 
@@ -1161,7 +1120,7 @@
             <div class="step">
                 <span class="step-number">2</span>
                 <strong>Запустите автообход</strong>
-                <p>Нажмите кнопку <span class="button-example">🚀 ЗАПУСТИТЬ АВТООБХОД</span> в секции управления
+                <p>Нажмите кнопку <span class="auto-measure-button">ЗАПУСТИТЬ АВТООБХОД</span> в секции управления
                     измерениями.</p>
             </div>
 
@@ -1219,12 +1178,12 @@
                         <th style="width: 150px;">Действие пользователя</th>
                     </tr>
                     <tr>
-                        <td><strong>🚀 АВТООБХОД ЗАПУЩЕН...</strong></td>
+                        <td><strong>АВТООБХОД ЗАПУЩЕН...</strong></td>
                         <td>Процесс автообхода начат успешно. Программа готова к измерениям.</td>
                         <td>Готовьте датчик к перемещению</td>
                     </tr>
                     <tr>
-                        <td><strong>📌 ТОЧКА (2,3)</strong><br>Координаты: X: 100 мм, Y: 150 мм</td>
+                        <td><strong>ТОЧКА (2,3)</strong><br>Координаты: X: 100 мм, Y: 150 мм</td>
                         <td>Текущая точка для измерения. Показаны координаты сетки и физические координаты на столе.
                         </td>
                         <td>Переместите датчик к указанным координатам</td>
@@ -1983,6 +1942,20 @@
                     <li><strong>Обращением к инструкции</strong> - 10% случаев</li>
                 </ul>
                 Всегда начинайте с простых решений перед сложной диагностикой.
+            </div>
+        </div>
+
+        <!-- Загрузки -->
+        <div class="container" id="downloads">
+            <h2><i class="fas fa-download"></i> 12. Загрузки</h2>
+            <div class="requirements-grid">
+                <div class="requirement-card software">
+                    <h4><i class="fas fa-desktop"></i> Программа для анализа кривизны стола</h4>
+                    <p>Скачать последнюю версию программы:</p>
+                    <p><a href="files/BedLevelingApp.exe" download class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-download"></i> Скачать BedLevelingApp.exe</a></p>
+                    <p>Размер файла: ~50 МБ</p>
+                    <p>Требуется Windows 10/11</p>
+                </div>
             </div>
         </div>
 
