--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
             <h2><i class="fas fa-ruler"></i> 7. Процесс измерения</h2>
 
             <div class="screenshot">
-                <img src="images/measurement_process.png" alt="Процесс измерения">
+                <img src="images/leveling.gif" alt="Процесс измерения">
                 <p class="caption">Рисунок 11: Процесс измерения точки на интерактивной карте</p>
             </div>
 
@@ -1012,15 +1012,13 @@
             <div class="step">
                 <span class="step-number">2</span>
                 <strong>Переместите датчик</strong>
-                <p>Установите датчик точно над выбранной точкой на столе принтера. Высота должна быть в рабочем
-                    диапазоне 0-13 мм (рекомендуется 5-10 мм для точных измерений).</p>
+                <p>Установите датчик точно над выбранной точкой на столе принтера..</p>
             </div>
 
             <div class="step">
                 <span class="step-number">3</span>
                 <strong>Дождитесь стабилизации показаний</strong>
-                <p>Подождите 2-3 секунды, пока показания на индикаторе перестанут меняться. Значение должно колебаться в
-                    пределах ±0.02 мм.</p>
+                <p>Подождите 2-3 секунды, пока показания на индикаторе перестанут меняться.</p>
             </div>
 
             <div class="step">
@@ -1101,12 +1099,12 @@
 
         <!-- Раздел 8 -->
         <div class="container" id="section8">
-            <h2><i class="fas fa-robot"></i> 8. Автоматический обход</h2>
+            <h2><i class="fas fa-robot"></i> 8. Автоматический обход (условно)</h2>
 
-            <div class="screenshot">
+            <!-- <div class="screenshot">
                 <img src="images/auto_measurement.png" alt="Автоматический обход">
                 <p class="caption">Рисунок 12: Окно автоматического обхода точек с пошаговыми инструкциями</p>
-            </div>
+            </div> -->
 
             <h3>Запуск автоматического обхода:</h3>
 
@@ -1237,10 +1235,10 @@
             <h2><i class="fas fa-chart-line"></i> 9. Анализ результатов</h2>
 
             <h3>Статистика измерений:</h3>
-            <div class="screenshot">
+            <!-- <div class="screenshot">
                 <img src="images/measurement_stats.png" alt="Статистика измерений">
                 <p class="caption">Рисунок 13: Секция статистики на основной панели с графиками</p>
-            </div>
+            </div> -->
 
             <div class="table-container">
                 <table>
@@ -1317,8 +1315,8 @@
             </div>
 
             <div class="screenshot">
-                <img src="images/3d_visualization.png" alt="3D визуализация">
-                <p class="caption">Рисунок 14: 3D карта поверхности стола с цветовой индикацией высоты</p>
+                <img src="images/measurement_stats.png" alt="3D визуализация">
+                <p class="caption">Рисунок 14: 3D карта поверхности стола.</p>
             </div>
 
             <h3>Анализ выравнивания и рекомендации:</h3>
