--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                             вопросы</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link"><span
                                 class="nav-icon">📞</span>Контакты</a></li>
-                    <li class="nav-item"><a href="#downloads" class="nav-link"><span class="nav-icon">⬇️</span>Загрузки</a></li>
+                    <li class="nav-item"><a href="#products" class="nav-link"><span class="nav-icon">📦</span>Наши продукты</a></li>
                     <li class="nav-item"><a href="#top" class="nav-link"><span class="nav-icon">⬆️</span>В начало</a>
                     </li>
                 </ul>
@@ -2043,11 +2043,42 @@
             </div>
         </div>
 
+        <!-- Добавляем раздел "Наши продукты" -->
+        <div class="container" id="products">
+            <h2><i class="fas fa-box"></i> Наши продукты</h2>
+            <div class="requirements-grid">
+                <!-- <div class="requirement-card software">
+                    <h4><i class="fas fa-microchip"></i> BedLeveling</h4>
+                    <p><a href="https://github.com/NikElectronics/BedLeveling" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fab fa-github"></i> Перейти к репозиторию</a></p>
+                </div>
+                <div class="requirement-card software">
+                    <h4><i class="fas fa-robot"></i> ESP32 Firmware</h4>
+                    <p><a href="https://github.com/NikElectronics/ESP32-Firmware" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fab fa-github"></i> Перейти к репозиторию</a></p>
+                </div>
+                <div class="requirement-card software">
+                    <h4><i class="fas fa-cogs"></i> Calibration Tool</h4>
+                    <p><a href="https://github.com/NikElectronics/Calibration-Tool" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fab fa-github"></i> Перейти к репозиторию</a></p>
+                </div> -->
+                <div class="requirement-card software">
+                    <h4><i class="fas fa-water"></i> ELIXtoFIX</h4>
+                    <p><a href="https://nikelectronics.github.io/ELIXStoFIX/" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-external-link-alt"></i> Перейти к продукту</a></p>
+                </div>
+                <div class="requirement-card software">
+                    <h4><i class="fas fa-thermometer"></i> TempBot-1000</h4>
+                    <p><a href="https://nikelectronics.github.io/TempBot-1000/" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-external-link-alt"></i> Перейти к продукту</a></p>
+                </div>
+                <div class="requirement-card software">
+                    <h4><i class="fas fa-faucet"></i> Fountain Manual</h4>
+                    <p><a href="https://nikelectronics.github.io/fountain_manual/" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-external-link-alt"></i> Перейти к продукту</a></p>
+                </div>
+            </div>
+        </div>
+
         <footer>
             <p>© 2025 Система анализа кривизны стола 3D-принтера. Все права защищены.</p>
             <p>Версия программы: 1.0 | Дата составления руководства: 19.12.2025 | Версия руководства: 1.0</p>
-            <p>Для получения обновлений посетите наш сайта: <a href="https://bedleveling.com"
-                    target="_blank">bedleveling.com</a></p>
+            <!-- <p>Для получения обновлений посетите наш сайта: <a href="https://bedleveling.com" -->
+                    <!-- target="_blank">bedleveling.com</a></p>
             <p style="margin-top: 15px; font-size: 0.8em; color: #95a5a6;">
                 <i class="fas fa-mouse-pointer"></i> Используйте боковое меню для быстрой навигации |
                 <i class="fas fa-bars"></i> Нажмите на кнопку в левом верхнем углу для открытия меню
@@ -2055,7 +2086,7 @@
             <p style="margin-top: 10px; font-size: 0.7em; color: #bdc3c7;">
                 Это руководство является интеллектуальной собственностью. Копирование и распространение без разрешения
                 запрещено.
-            </p>
+            </p> -->
         </footer>
     </div>
 
