--- a/index.html
+++ b/index.html
@@ -2061,14 +2061,17 @@
                 </div> -->
                 <div class="requirement-card software">
                     <h4><i class="fas fa-water"></i> ELIXtoFIX</h4>
+                    <p>Диагностический модуль для работы с аккумуляторами MAKITA LXT</p>
                     <p><a href="https://nikelectronics.github.io/ELIXStoFIX/" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-external-link-alt"></i> Перейти к продукту</a></p>
                 </div>
                 <div class="requirement-card software">
                     <h4><i class="fas fa-thermometer"></i> TempBot-1000</h4>
-                    <p><a href="https://nikelectronics.github.io/TempBot-1000/" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-external-link-alt"></i> Перейти к продукту</a></p>
+                    <p>Набор для построения термобокса</p>
+                    <p><a href="https://nikelectronics.github.io/TempBot-100/" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-external-link-alt"></i> Перейти к продукту</a></p>
                 </div>
                 <div class="requirement-card software">
                     <h4><i class="fas fa-faucet"></i> Fountain Manual</h4>
+                    <p>Контроллер управления фонтаном</p>
                     <p><a href="https://nikelectronics.github.io/fountain_manual/" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-external-link-alt"></i> Перейти к продукту</a></p>
                 </div>
             </div>
