--- a/index.html
+++ b/index.html
@@ -2060,7 +2060,7 @@
                     <p><a href="https://github.com/NikElectronics/Calibration-Tool" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fab fa-github"></i> Перейти к репозиторию</a></p>
                 </div> -->
                 <div class="requirement-card software">
-                    <h4><i class="fas fa-cube"></i> ELIXtoFIX</h4>
+                    <h4><i class="fas fa-cube"></i> ЭликсToFIX</h4>
                     <p>Диагностический модуль для работы с аккумуляторами MAKITA LXT</p>
                     <p><a href="https://nikelectronics.github.io/ELIXStoFIX/" target="_blank" class="button-example" style="display: inline-block; text-decoration: none;"><i class="fas fa-external-link-alt"></i> Перейти к продукту</a></p>
                 </div>
