--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
             <h2><i class="fas fa-microchip"></i> 1. Аппаратная часть системы</h2>
 
             <div class="screenshot">
-                <img src="images/hardware_setup.jpg" alt="Аппаратная часть системы">
+                <img src="images/hard.png" alt="Аппаратная часть системы">
                 <p class="caption">Рисунок 1: Аппаратная часть системы </p>
             </div>
 
